--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -5,9 +5,6 @@ on:
     tags:
       - 'V1.*.*'
 
-env:
-  IMAGE_NAME: mariedugoua/tp9
-
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -25,7 +22,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v3
       with:
-        images: ${{ env.IMAGE_NAME }}
+        images: mariedugoua/tp9
         tags: |
           type=semver,pattern={{version}}
 
@@ -33,6 +30,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
+        file: Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags}}
 
