--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -24,8 +24,6 @@ jobs:
                 uses: docker/metadata-action@v4
                 with:
                     images: mariedugoua/tp9
-                    tags: |
-                        type=semver,pattern={{version}}
 
             -   name: Build and push Docker image
                 uses: docker/build-push-action@v4
@@ -34,4 +32,5 @@ jobs:
                     file: Dockerfile
                     push: true
                     tags: ${{ steps.meta.outputs.tags }}
+                    labels: ${{ steps.meta.outputs.labels }}
 
